
  [ Lu Yaning ]
  * Backport upstream patch to fix recursion crash when calling
    setStyleSheet with `qproperty-styleSheet`: fix_recursion_crash.diff.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Backport upstream patch
    xcb_add_a_timeout_control_when_reading_INCR_property.patch in order to fix
    timestamp issue on QXcbConnection,
    https://bugreports.qt.io/browse/QTBUG-56595

 -- Debian Janitor <janitor@jelmer.uk>  Fri, 27 Aug 2021 23:06:45 -0000

qtbase-opensource-src (5.15.2+dfsg-10) unstable; urgency=medium

  [ Lu Yaning ]
  * Restore fix-misplacement-of-placeholder-text-in-QLineEdit.diff.
  * Backport upstream patch to fix the regression with placement of
    placeholder text in QLineEdits with action icons.

  [ Dmitry Shachnev ]
  * Backport upstream patch to fix icon display on checkable QPushButtons
    with Fusion style (closes: #991255).
  * Backport upstream patch to remove MySQL version checks, which led to
    wrong conclusions with MariaDB Connector ≥ 3.2.
  * Backport upstream patch to fix QTextFormat::FullWidthSelection for
    right-to-left text layouts.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 15 Aug 2021 21:32:57 +0300

qtbase-opensource-src (5.15.2+dfsg-9) unstable; urgency=medium

  * Revert adding fix-misplacement-of-placeholder-text-in-QLineEdit.diff.
    Unfortunately it causes a regression (see QTBUG-94824).

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 02 Jul 2021 18:58:04 +0300

qtbase-opensource-src (5.15.2+dfsg-8) unstable; urgency=medium

  [ Lu Yaning ]
  * Backport upstream patch to fix misplacement of placeholder text in
    QLineEdit with RTL content.

  [ Dmitry Shachnev ]
  * Remove the qmimeprovider.cpp part of mime_globs.diff. It is unrelated
    to the original purpose of that patch, and causes various problems
    (closes: #989255, #989744, #990129).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 28 Jun 2021 20:38:59 +0300

qtbase-opensource-src (5.15.2+dfsg-7) unstable; urgency=medium

  [ Lu Yaning ]