@@ -12,6 +12,7 @@ qtbase-opensource-src (5.15.2+dfsg-11) UNRELEASED; urgency=medium
     xcb_add_a_timeout_control_when_reading_INCR_property.patch in order to fix
     timestamp issue on QXcbConnection,
     https://bugreports.qt.io/browse/QTBUG-56595
+  * Refresh fix_recursion_crash.diff.
 
  -- Debian Janitor <janitor@jelmer.uk>  Fri, 27 Aug 2021 23:06:45 -0000
 
